--- a/index.html
+++ b/index.html
@@ -5,243 +5,14 @@
   <title>Band Landing Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    :root {
-      --yellow: #ffd319;
-      --yellow-dark: #f0c200;
-      --text-main: #111111;
-      --text-muted: #444444;
-      --border-subtle: rgba(0, 0, 0, 0.12);
-      --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.35);
-      --radius-card: 16px;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: var(--text-main);
-      overflow-x: hidden;
-    }
-
-    /* Full-screen background image */
-    .page {
-      position: relative;
-      min-height: 100vh;
-      background-image: url("your-background-image.jpg"); /* <- replace with your image */
-      background-size: cover;
-      background-position: center center;
-      background-repeat: no-repeat;
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
-      padding: 24px;
-    }
-
-    /* Slight dark overlay to improve contrast */
-    .page::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.35), transparent 45%);
-      pointer-events: none;
-    }
-
-    /* Yellow card on the left */
-    .card {
-      position: relative;
-      z-index: 1;
-      max-width: 520px;
-      width: 100%;
-      background: var(--yellow);
-      border-radius: var(--radius-card);
-      box-shadow: var(--shadow-soft);
-      padding: 28px 32px 20px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .card-title {
-      font-size: clamp(2.8rem, 6vw, 4.4rem);
-      line-height: 0.9;
-      font-weight: 800;
-      margin: 0 0 18px;
-    }
-
-    /* Event list */
-    .event-list {
-      border-radius: 12px;
-      overflow: hidden;
-      background: rgba(255, 211, 25, 0.9);
-    }
-
-    .event {
-      display: grid;
-      grid-template-columns: minmax(0, 2fr) minmax(0, 3fr) auto;
-      column-gap: 20px;
-      padding: 14px 4px;
-      border-top: 1px solid var(--border-subtle);
-      font-size: 0.9rem;
-    }
-
-    .event:first-child {
-      border-top: none;
-    }
-
-    .event-date {
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 0.78rem;
-      letter-spacing: 0.12em;
-      margin-bottom: 4px;
-    }
-
-    .event-desc-main {
-      font-size: 0.88rem;
-      margin-bottom: 2px;
-    }
-
-    .event-desc-sub {
-      font-size: 0.78rem;
-      color: var(--text-muted);
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-    }
-
-    .event-label {
-      align-self: center;
-      font-size: 0.78rem;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      white-space: nowrap;
-    }
-
-    /* Bottom buttons */
-    .card-footer {
-      margin-top: 18px;
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 16px;
-    }
-
-    .card-button {
-      border-radius: 999px;
-      border: 1px solid var(--border-subtle);
-      background: transparent;
-      padding: 10px 16px;
-      font-size: 0.85rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      cursor: pointer;
-      text-align: center;
-      transition: background 0.15s ease, transform 0.1s ease, box-shadow 0.1s ease;
-    }
-
-    .card-button:hover {
-      background: var(--yellow-dark);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-      transform: translateY(-1px);
-    }
-
-    /* Right vertical pill bar for social links */
-    .right-bar {
-      position: fixed;
-      right: 24px;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: 1;
-      background: var(--yellow);
-      border-radius: 999px;
-      padding: 16px 10px;
-      box-shadow: var(--shadow-soft);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .icon-pill {
-      width: 28px;
-      height: 28px;
-      border-radius: 999px;
-      border: 1px solid var(--border-subtle);
-      background: rgba(255, 255, 255, 0.25);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.85rem;
-      cursor: pointer;
-    }
-
-    .icon-pill span {
-      pointer-events: none;
-    }
-
-    /* Small label dots at bottom of right bar (optional) */
-    .icon-dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: var(--text-main);
-      opacity: 0.6;
-    }
-
-    /* Responsive tweaks */
-    @media (max-width: 900px) {
-      .page {
-        align-items: flex-start;
-        justify-content: center;
-        padding: 16px;
-      }
-
-      .right-bar {
-        right: 12px;
-      }
-
-      .card {
-        padding: 20px 18px 16px;
-      }
-
-      .event {
-        grid-template-columns: minmax(0, 2fr) minmax(0, 3fr);
-        row-gap: 4px;
-      }
-
-      .event-label {
-        grid-column: 1 / -1;
-        text-align: right;
-        padding-top: 4px;
-      }
-    }
-
-    @media (max-width: 600px) {
-      .page {
-        padding: 12px;
-      }
-
-      .right-bar {
-        top: auto;
-        bottom: 16px;
-        transform: none;
-        flex-direction: row;
-        border-radius: 999px;
-      }
-    }
-  </style>
+  <!-- Link to external stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="page">
     <!-- Yellow content card -->
     <div class="card">
-      <h1 class="card-title">Untitled-1</h1>
+      <h1 class="card-title">HAG</h1>
 
       <div class="event-list">
         <!-- EVENT 1 -->
@@ -251,9 +22,7 @@
             <div class="event-desc-main">Lorem ipsum dolor sit, amet consec</div>
             <div class="event-desc-sub">Elusmod Tempor, 2025</div>
           </div>
-          <div>
-            <!-- Extra description field if you want more copy -->
-          </div>
+          <div></div>
           <div class="event-label">Lorem 01</div>
         </div>
 
@@ -301,9 +70,9 @@
     <!-- Right vertical icon bar -->
     <div class="right-bar">
       <!-- Replace letters with icons or SVGs later -->
-      <div class="icon-pill"><span>Y</span></div> <!-- e.g. YouTube -->
-      <div class="icon-pill"><span>S</span></div> <!-- e.g. Spotify -->
-      <div class="icon-pill"><span>A</span></div> <!-- e.g. Apple -->
+      <a class="icon-pill" href="#" aria-label="YouTube link"><span>Y</span></a>
+      <a class="icon-pill" href="#" aria-label="Spotify link"><span>S</span></a>
+      <a class="icon-pill" href="#" aria-label="Apple Music link"><span>A</span></a>
       <div class="icon-dot"></div>
     </div>
   </div>
