Update to SIMPLE PAGE
Update to SIMPLE PAGE

--- a/index.html
+++ b/index.html
@@ -2,79 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Band Landing Page</title>
+  <title>Some Sort of Event</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Link to external stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="page">
-    <!-- Yellow content card -->
-    <div class="card">
-      <h1 class="card-title">HAG</h1>
 
-      <div class="event-list">
-        <!-- EVENT 1 -->
-        <div class="event">
-          <div>
-            <div class="event-date">Mar. 15, 2026</div>
-            <div class="event-desc-main">Lorem ipsum dolor sit, amet consec</div>
-            <div class="event-desc-sub">Elusmod Tempor, 2025</div>
-          </div>
-          <div></div>
-          <div class="event-label">Lorem 01</div>
-        </div>
+    <!-- Diagonal side labels -->
+    <div class="side-label side-label-left">LIVE!!!!!</div>
+    <div class="side-label side-label-right">INFO</div>
 
-        <!-- EVENT 2 -->
-        <div class="event">
-          <div>
-            <div class="event-date">Mar. 22, 2026</div>
-            <div class="event-desc-main">Nullam varius, turpis et scelerisque</div>
-            <div class="event-desc-sub">Placeholder Venue, 2025</div>
-          </div>
-          <div></div>
-          <div class="event-label">Lorem 02</div>
-        </div>
+    <!-- Central flyer column -->
+    <main class="flyer-wrapper">
+      <h1 class="event-title">HAG</h1>
 
-        <!-- EVENT 3 -->
-        <div class="event">
-          <div>
-            <div class="event-date">Mar. 23, 2026</div>
-            <div class="event-desc-main">Fusce id dui, sit amet tellus</div>
-            <div class="event-desc-sub">City Name, 2025</div>
-          </div>
-          <div></div>
-          <div class="event-label">Lorem 03</div>
-        </div>
-
-        <!-- EVENT 4 -->
-        <div class="event">
-          <div>
-            <div class="event-date">Aug. 3, 2026</div>
-            <div class="event-desc-main">Tristique neque consequat, es sapien</div>
-            <div class="event-desc-sub">Varius Nunc, 2025</div>
-          </div>
-          <div></div>
-          <div class="event-label">Lorem 04</div>
-        </div>
+      <div class="flyer-image">
+        <!-- Replace the src with your real flyer image -->
+        <img src="landing main v2.jpg" alt="Event flyer artwork">
       </div>
 
-      <!-- Buttons -->
-      <div class="card-footer">
-        <button class="card-button">Shop</button>
-        <button class="card-button">IG</button>
-      </div>
-    </div>
+      <p class="event-tagline">hood/wytch/eye/clit/magic</p>
 
-    <!-- Right vertical icon bar -->
-    <div class="right-bar">
-      <!-- Replace letters with icons or SVGs later -->
-      <a class="icon-pill" href="#" aria-label="YouTube link"><span>Y</span></a>
-      <a class="icon-pill" href="#" aria-label="Spotify link"><span>S</span></a>
-      <a class="icon-pill" href="#" aria-label="Apple Music link"><span>A</span></a>
-      <div class="icon-dot"></div>
-    </div>
+      <div class="social-row">
+        <!-- Replace # with your real Instagram URL -->
+        <a href="#" class="social-icon" aria-label="Instagram">
+          <!-- You can swap this text for an SVG icon later -->
+          IG
+        </a>
+
+        <!-- Replace email address as needed -->
+        <a href="mailto:youremail@example.com" class="social-icon" aria-label="Email">
+          ✉
+        </a>
+      </div>
+    </main>
   </div>
 </body>
 </html>
