Side text update
Side text update landing page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 <body>
   <div class="page">
 
-    <!-- Diagonal side labels -->
+    <!-- Left side label + vertical text -->
     <div class="side-label side-label-left">LIVE!!!!!</div>
+    <div class="side-text side-text-left">
+      <p>
+        lorem ipsum dolor sit amet, consectetur adipiscing elit. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <p>
+        duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+
+    <!-- Right side label + vertical text -->
     <div class="side-label side-label-right">INFO</div>
+    <div class="side-text side-text-right">
+      <p>
+        lorem ipsum dolor sit amet, consectetur adipiscing elit. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <p>
+        duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
 
     <!-- Central flyer column -->
     <main class="flyer-wrapper">
@@ -28,7 +46,6 @@
       <div class="social-row">
         <!-- Replace # with your real Instagram URL -->
         <a href="#" class="social-icon" aria-label="Instagram">
-          <!-- You can swap this text for an SVG icon later -->
           IG
         </a>
 
