Adjusting position of HAG title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
     <!-- Central flyer column -->
     <main class="flyer-wrapper">
-      <h1 class="event-title">HAG</h1>
+      <h1 class="event-title">
+  <img src="hag-title.png" alt="HAG logo">
+</h1>
 
       <div class="flyer-image">
         <!-- Replace the src with your real flyer image -->
