Updated email address

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </a>
 
         <!-- Replace email address as needed -->
-        <a href="mailto:youremail@example.com" class="social-icon" aria-label="Email">
+        <a href="mailto:contacthag@protonmail.com" class="social-icon" aria-label="Email">
           ✉
         </a>
       </div>
