Instagram link update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="social-row">
         <!-- Replace # with your real Instagram URL -->
-        <a href="#" class="social-icon" aria-label="Instagram">
+        <a href="https://www.instagram.com/hagisaband/" class="social-icon" aria-label="Instagram">
           IG
         </a>
 
