--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           ✉
         </a>
       </div>
+      
+        <!-- Extra image below social icons -->
+      <div class="extra-image">
+        <img src="HAG PNG.png" alt="extra image">
+      </div>
+      
     </main>
   </div>
 </body>
