Image placement swap
Swapped images around on landing page

--- a/index.html
+++ b/index.html
@@ -35,34 +35,41 @@
     <!-- Central flyer column -->
     <main class="flyer-wrapper">
       <h1 class="event-title">
-  <img src="hag-title.png" alt="HAG logo">
-</h1>
+        <img src="hag-title.png" alt="HAG logo">
+      </h1>
 
       <div class="flyer-image">
-        <!-- Replace the src with your real flyer image -->
-        <img src="landing main v2.jpg" alt="Event flyer artwork">
+        <!-- TOP IMAGE (now HAG PNG) -->
+        <img src="HAG PNG.png" alt="HAG artwork">
       </div>
 
       <p class="event-tagline">hood/wytch/eye/clit/magic</p>
 
       <div class="social-row">
-        <!-- Replace # with your real Instagram URL -->
-        <a href="https://www.instagram.com/hagisaband/" class="social-icon" aria-label="Instagram">
+        <!-- Instagram -->
+        <a href="https://www.instagram.com/hagisaband/" 
+           target="_blank" 
+           rel="noopener" 
+           class="social-icon" 
+           aria-label="Instagram">
           IG
         </a>
 
-        <!-- Replace email address as needed -->
+        <!-- Email -->
         <a href="mailto:contacthag@protonmail.com" class="social-icon" aria-label="Email">
           ✉
         </a>
       </div>
+
+      <br>
       
-        <!-- Extra image below social icons -->
+      <!-- BOTTOM IMAGE (now landing main v2) -->
       <div class="extra-image">
-        <img src="HAG PNG.png" alt="extra image">
+        <img src="landing main v2.jpg" alt="Event flyer artwork">
       </div>
       
     </main>
   </div>
 </body>
 </html>
+
