Red bird image logo
Red bird logo image inserted to bottom of page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         <img src="landing main v2.jpg" alt="Event flyer artwork">
       </div>
       
+      <!-- THIRD IMAGE BELOW -->
+      <div class="extra-image">
+        <img src="HAG LOGO NO BACKGROUND.png" alt="Red Bird Image">
+      </div>
+      
     </main>
   </div>
 </body>
