--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="side-label side-label-left">LIVE!!!!!</div>
     <div class="side-text side-text-left">
       <p>
-        lorem ipsum dolor sit amet, consectetur adipiscing elit. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Open to bookings!!!
       </p>
       <p>
-        duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       Get in touch (via email or IG).
       </p>
     </div>
 
@@ -25,10 +25,10 @@
     <div class="side-label side-label-right">INFO</div>
     <div class="side-text side-text-right">
       <p>
-        lorem ipsum dolor sit amet, consectetur adipiscing elit. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        HAG is a new queer live act from Bristol. A dramatic, experimental electro-gregorian, monk-punk, art-pop-EBM band known for hypnotic live shows that feel part séance part rave. HAG beam out powerful vocals, polyphonic harmonies, bass and synth, connecting wytches from the past present and future. Enter into our shroud of sound, with songs about aging, beauty, breasts, queerness, nature and the unity found in being the 'other'.
       </p>
       <p>
-        duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Made up of Viki Browne (performance artist/ director), S-J Burton (singer/ songwriter) & Cardboard (multi-instrumentalist/ painter).
       </p>
     </div>
 
